fixed alignment in html file

--- a/styles.css
+++ b/styles.css
@@ -462,7 +462,7 @@ transition: all 300ms ease;
 }
 
 .steps__text--container p{
-    font-size: 16px;
+    font-size: 14px;
     line-height: 2;
     color: #243e63;
 }
